Wed Feb 22 22:18:56 UTC 2006  Olli Savia  <ops@iki.fi>

        * tests/run_test.lst:
          Run some more tests on LynxOS.

Wed Feb 22 21:30:35 UTC 2006  Olli Savia  <ops@iki.fi>

        * ace/Truncate.inl:
          Added include "ace/os_include/os_limits.h" to pull INT_MAX.

        * ace/config-lynxos.h:
          Define ACE_LACKS_NUMERIC_LIMITS when compiling with GCC 2.x.
          Define ACE_HAS_POSIX_SEM on LynxOS 4.0.

Wed Feb 22 19:16:32 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/ACE_export.h: Add __HP_aCC 06.05 and up to the list of compilers
          that don't like "extern inline".

Wed Feb 22 16:50:16 UTC 2006  Steve Huston  <shuston@riverace.com>

        * ace/String_Base.{h cpp}: Add operator= to set string from a
          CHAR*. Optimizes performance in this case by removing the need
          for a temporary object. Thanks to Kelly Hickel <kfh at mqsoftware
          dot com> for this improvement.

        * tests/SString_Test.cpp: Added test for new operator=.

Wed Feb 22 17:26:01 UTC 2006  Olli Savia  <ops@iki.fi>

        * ace/TTY_IO.h:
          Changed type of dtrdisable from int to bool.

        * examples/IPC_SAP/DEV_SAP/reader/reader.cpp:
        * examples/IPC_SAP/DEV_SAP/writer/writer.cpp:
          Changed to reflect recent changes in TTY_IO.h.

Wed Feb 22 16:31:28 UTC 2006  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/config/vcl.mpb:

          Added the 'bmake' type in order to support VCL.

        * bin/mpc.pl:
        * bin/mwc.pl:

          Simplified these scripts by using FindBin.  Also, made a
          modification to preserve @ARGV so that when it is used by the
          workspace creators, it contains the original arguments provided by
          the user.

Wed Feb 22 16:26:43 GMT 2006  Rich Seibel <seibel_r@ociweb.com>

        * include/makeinclude/platform_aix_ibm.GNU:
        * THANKS
          Added templates=manual to set manually instantiated